fix some issues on mobile

--- a/works/ProceduralLake/ProceduralLake_embed.css
+++ b/works/ProceduralLake/ProceduralLake_embed.css
@@ -6,7 +6,7 @@
 
 .tscplayer_inline {
 	position:static;
-	margin: 30px;
+	margin: 0px;
 	width: 852px;
 	height: 480px;
 	z-index:auto;
